# SciVis_Ex

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json  reinstall-cmake.sh
0-intro/: cgv_demo.cxx  config.def  cubes_drawable.cxx  cubes_fractal.cxx  debug_macros.h  task0_framework.pj
1-stereo/: CMakeLists.txt  config.def  scivis-stereo.pj  stereo.cxx
1-stereo/glsl/: finalize.glfs
2-particle/: CMakeLists.txt  config.def  particle.cxx  scivis-particle.pj
2-particle/glsl/: cylinder_raycast.glfs  cylinder_raycast.glgs
3-terrain/: CMakeLists.txt  config.def  scivis-terrain.pj  terrain.cxx
4-volume/: CMakeLists.txt  config.def  lib_begin.h  scivis-volume.pj  volume.cxx  volume.h  volume_io.cxx  volume_io.h  volume_view.cxx
4-volume/glsl/: slicer.glfs  slicer.glpr  slicer.glvs
cgv/3rd/jpeg/: CMakeLists.txt
cgv/3rd/zlib/: CMakeLists.txt
cgv/apps/cgv_viewer/: main.cxx
cgv/cgv/base/: base.h  base_generator.h  group.cxx  group.h  traverser.cxx  traverser.h
cgv/cgv/data/: component_format.h  data_format.cxx  data_format.h  image_view.cxx
cgv/cgv/gui/: dialog.h  gui_driver.h  layout_table.cxx  provider.cxx  provider.h
cgv/cgv/math/: fvec.h  quaternion.h  vec.h
cgv/cgv/media/: axis_aligned_box.h  color.h
cgv/cgv/os/: clipboard.cxx
cgv/cgv/ppp/: ph_processor.cxx  variables.cxx
cgv/cgv/render/: context.cxx  context.h  shader_program.cxx  texture.cxx  view.cxx  view.h
cgv/cgv/utils/: file.cxx
cgv/libs/point_cloud/: point_cloud.cxx
data/: aneurism.hd  head256.hd
(+54 files in other folders)
